syntax = "proto3";

option go_package = "github.com/dohernandez/faceit/internal/platform/service/pb/api";

package api.faceit;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "faceit"
    version: "1.0"
    description: "faceit is small microservice to manage Users."
  }
  schemes: HTTP;
  consumes: "application/json"
  produces: "application/json"
  responses: {
    key: "400"
    value: {
      description: "Bad Request.";
      examples: {
        key: "application/json"
        value: '{"code": 400,"message": "Bad Request","error": "error_id_uuid","details": [{"field": "field", "description": "invalid"}]}'
      }
      schema: {
        json_schema: {
          ref: ".google.rpc.Status"
        }
      }
    }
  }
  responses: {
    key: "500"
    value: {
      description: "Internal error."
      examples: {
        key: "application/json"
        value: '{"code": 500, "message": "message","error": "error_id_uuid"}'
      }
      schema: {
        json_schema: {
          ref: ".google.rpc.Status"
        }
      }
    }
  }
};

// The API to manages users.
service FaceitService {
  // AddUser add new user.
  //
  // Receives a request with user data. Responses whether the user was added successfully or not.
  rpc AddUser(UserRequest) returns (google.protobuf.Empty) {
    // Client example (Assuming the service is hosted at the given 'DOMAIN_NAME'):
    // Client example:
    //   curl -d '{"first_name": "Alice", "last_name": "Bob", "nickname": "AB123", "password_hash": "supersecurepassword", "email": "alice@bob.com", "country": "UK"}' http://DOMAIN_NAME/v1/users
    option (google.api.http) = {
      post : "/v1/users"
      body : "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "204"
        value: {
          description: "User was added successfully."
          examples: {
            key: "application/json"
            value: '{}'
          }
          schema: {
            json_schema: {
              ref: ".google.protobuf.Empty"
            }
          }
        }
      }
    };
  }

  // Update the user.
  //
  // Receives a request with user data. Responses whether the user was updated successfully or not.
  rpc UpdateUser(UserRequest) returns (google.protobuf.Empty) {
    // Client example (Assuming the service is hosted at the given 'DOMAIN_NAME'):
    // Client example:
    //   curl -X PATCH -d '{"first_name": "Alice", "last_name": "Bob", "nickname": "AB123", "country": "UK"}' http://DOMAIN_NAME/v1/users/26ef0140-c436-4838-a271-32652c72f6f2
    option (google.api.http) = {
      patch : "/v1/users/{id}"
      body : "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "204"
        value: {
          description: "User was updated successfully."
          schema: {
            json_schema: {
              ref: ".google.protobuf.Empty"
            }
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "User not found."
          schema: {
            json_schema: {
              ref: ".google.protobuf.Empty"
            }
          }
        }
      }
    };
  };
/*
  // GetFuncName.
  //
  // Receives a request with ... . Responses ... .
  rpc GetFuncName(GetFuncRequest) returns (GetFuncResponse) {
    // Client example (Assuming the service is hosted at the given 'DOMAIN_NAME'):
    // Client example:
    //   curl http://DOMAIN_NAME/resource/name
    option (google.api.http) = {
      get : "/v1/resource/name"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200"
        value: {
          examples: {
            key: "application/json"
            value: '{}'
          }
          schema: {
            json_schema: {
              ref: ".kit.template.GetFuncNameResponse"
            }
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not found response."
          schema: {
            json_schema: {
              ref: ".google.rpc.Status"
            }
          }
        }
      }
    };
  }*/
}

message UserRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "UserRequest"
      description: "Request message represent user."
      required: ["id"]
    }
  };

  // ID of the user.
  string id = 1 [(buf.validate.field).cel = {
    message: "must not be empty"
    expression: "this != ''"
  }, (buf.validate.field).string.uuid = true];

  // First name of the user.
  optional string first_name = 2 [(buf.validate.field).cel = {
    message: "must not be empty"
    expression: "this != ''"
  }];
  // Last name of the user.
  optional string last_name = 3 [(buf.validate.field).cel = {
    message: "must not be empty"
    expression: "this != ''"
  }];
  // Nickname of the user.
  optional string nickname = 4;
  // Password hash of the user.
  optional string password_hash = 5 [(buf.validate.field).cel = {
    message: "must not be empty"
    expression: "this != ''"
  }, (buf.validate.field).cel = {
    message: "must not exceed 128 characters"
    expression: "this.size() <= 128"
  }];
  // Email of the user.
  optional string email = 6 [(buf.validate.field).cel = {
    message: "must not be empty"
    expression: "this != ''"
  }, (buf.validate.field).cel = {
    message: "must be a valid email"
    expression: "this.isEmail()"
  }];
  // Country of the user.
  optional string country = 7 [(buf.validate.field).cel = {
    message: "must not be empty"
    expression: "this != ''"
  }, (buf.validate.field).cel = {
    message: "must have 2 characters"
    expression: "this.size() == 2"
  }];
}

/*
message GetFuncRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GetFuncRequest"
      description: "Request message to ... ."
      required: []
    }
  };
  // ... .
  string getParam1 = 1;
}

message GetFuncResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GetFuncResponse"
      description: "Response message from ... ."
    }
  };

  // rows
  repeated RepeatedRow rows = 1;

  message RepeatedRow {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
      json_schema: {
        title: "RepeatedRow"
        description: "... ."
      }
    };
    // ... .
    string responseValue1 = 1;
    // ... .
    int64 responseValue2 = 2;
  }
}
*/
